[dependencies]
deno_core = "0.318.0"
deno_fs = "0.87.0"
deno_runtime = "0.186.0"
once_cell = "1.20.2"
rustler = "0.35.0"
serde_json = "1.0.133"
serde_v8 = "0.227.0"
tokio = "1.41.1"

[lib]
crate-type = ["cdylib"]
name = "deno_rider"
path = "src/lib.rs"

[package]
edition = "2021"
name = "deno_rider"
version = "0.1.0"
