[dependencies]
deno_core = "0.330.0"
deno_fs = "0.96.0"
deno_resolver = "0.17.0"
deno_runtime = "0.194.0"
rustler = "0.36.0"
serde_json = "1.0.133"
serde_v8 = "0.239.0"
slab = "0.4.9"
sys_traits = "0.1.7"
tokio = "1.41.1"

[lib]
crate-type = ["cdylib"]
name = "deno_rider"
path = "src/lib.rs"

[package]
edition = "2021"
name = "deno_rider"
version = "0.1.1"
